bin/tests/snapshots/impure_host_path__f85757552420ee81e331c7908dfdb0b3_lint_json.snap
---
source: bin/tests/impure_host_path.rs
---
"/usr/local/bin/jq . data.json"
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "impure_host_path",
      "note": "Found path outside the Nix store",
      "code": 27,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 2
            },
            "to": {
              "line": 1,
              "column": 19
            }
          },
          "message": "`/usr/local/` depends on the host system, use a package from nixpkgs instead",
          "suggestion": null,
          "fixable": false
        }
      ]
    }
  ]
}
